# instagram-transcriber

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: CancelButton.tsx  CopyButton.tsx  ExportMenu.tsx  FileDropZone.tsx  HistoryList.tsx  ProgressIndicator.tsx  TranscriptView.tsx  UrlInputForm.tsx
apps/web/src/context/: JobContext.tsx
apps/web/src/hooks/: useClipboard.ts  useHistory.ts  useJobPolling.ts
apps/web/src/lib/: validateInstagramUrl.ts
backend/: pyproject.toml
backend/backend/: cli.py  config.py
backend/backend/api/: app.py  routes.py  schemas.py
backend/backend/core/: audio.py  downloader.py  errors.py  exporter.py  history.py  job_manager.py  model_manager.py  pipeline.py  transcriber.py  validators.py
docs/: DEV_GUIDE.md  PRODUCTION_GUIDE.md
scripts/: setup.sh
