[project]
name = "instagram-transcriber"
version = "0.1.0"
description = "Local-first Instagram Reel/Post transcriber (yt-dlp + faster-whisper)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "faster-whisper>=1.0.3",
  "yt-dlp>=2024.12.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "pyperclip>=1.9",
  "typer>=0.13",
  # faster-whisper's VAD uses onnxruntime; pinned below 1.24 because newer
  # onnxruntime releases dropped macOS x86_64 (Intel) wheels entirely.
  "onnxruntime<1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.7", "mypy>=1.13"]

[project.scripts]
transcriber = "backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
